--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "react-icons": "^4.12.0",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0"
+    "lucide-react": "^0.563.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
