--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,11 @@ JWT_EXPIRES_IN=7d
 
 # CORS
 CLIENT_URL=http://localhost:3000
+
+# Email (SMTP) - for survey submissions
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+SMTP_FROM=your_email@gmail.com
